@@ -9,6 +9,7 @@ ikiwiki (3.05) UNRELEASED; urgency=low
   * Add noextension parameter to htmlize hooks to support, eg, Makefile.
   * Add tagged() PageSpec.
   * Updated German translation (Kai Wasserbäch). Closes: #516770
+  * Setup automator: Prompt for password twice. Closes: #516973
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Feb 2009 20:11:57 -0500
 
